# stackowl-personal-ai-assistant

./: .gitignore  .pre-commit-config.yaml  .puppeteerrc.cjs  AGENTS.md  ARC_B_HONESTY_DELIVERY_PLAN.md  CLAUDE.md  Dockerfile  EVOLUTION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENT_PROMPT.md  IMPROVEMENT_SPEC.md  OSCAR-SPEC.md  README.md  RESEARCH_PROMPT.md  ROADMAP.md  SPEC.md  SPEC_CAMOFOX_INTEGRATION.md  ai_not_yet_human.md  eslint.config.js  ideas.md  memory_impl_plan.md  node_modules  oscar-spec-plan.md  package-lock.json  package.json  pyproject.toml  ralph_history.txt  session.tmp  skills-stats.json  stackowl.config.json  start.sh  test-assistant.ts  test-ollama.ts  test-parliament.ts  tsconfig.json  vitest.config.ts
v2/: .gitignore  pyproject.toml  stackowl.yaml
v2/deploy/: ci-post-migration.yml
v2/docs/: browser-tool.md
v2/scripts/boundaries/: b1.py  b2.py  b4.py  b6.py
v2/src/stackowl/: exceptions.py  paths.py  version.py
v2/tests/: _story_6_4_helpers.py  _story_6_6_helpers.py  _story_7_2_helpers.py  _story_7_4_helpers.py  _story_7_5_helpers.py  test_c7_f130_audit_chain.py  test_c7_f131_export_scope.py  test_c7_f132_webhook_replay.py  test_c7_f133_sanitizer_hardening.py  test_consent_label_i18n.py  test_e0_s1_consent.py  test_e0_s1_dispatch_gate.py  test_e0_s1_telegram_consent.py  test_e0_s3_capability_profile.py  test_e0_s4_registration_hardening.py  test_migration_0055_delivery_attempts.py  test_sec7_audit_sink_failed_marker.py  test_story_10_4b.py  test_story_10_5.py  test_story_10_6.py  test_story_12_2.py  test_story_12_3.py  test_story_12_4.py  test_story_2_1.py  test_story_3_1_4.py  test_story_3_2_3.py  test_story_3_5.py  test_story_3_6.py  test_story_4_1.py  test_story_4_2.py  test_story_4_3.py  test_story_4_5.py  test_story_4_6.py  test_story_5_2.py  test_story_5_3.py  test_story_5_4.py  test_story_6_2.py  test_story_6_3.py  test_story_6_4.py  test_story_6_4b.py  (+12 more)
v2/tests/authz/: test_bounds_dispatch.py  test_effective_bounds.py  test_enforcement.py
v2/tests/channels/: test_proactive_no_target_is_noop.py  test_request_id_mint.py  test_resolve_target.py  test_splitter_link_atomic.py
v2/tests/cli/: test_mcp_status.py  test_plugins_install.py  test_providers_cli.py  test_start_command.py  test_start_single_migration.py
v2/tests/commands/: test_owls_builder.py  test_provider_command.py
v2/tests/config/: test_config_reload_safety.py  test_config_watch_debounce.py  test_config_watch_loop_dispatch.py  test_tool_iterations_aligned.py
v2/tests/db/: test_migration_0043_owner_scope.py  test_migration_0044_owner_scoped_unique.py  test_migration_0053_durable_delegation.py  test_pool_resilience.py  test_split_sql_tokenizer.py
v2/tests/gateway/: test_clarify_pump.py  test_completion_finalize_drain.py  test_concurrency_caps.py  test_intake_cap_enforcement.py  test_intake_drain_race.py  test_lost_steer_cas.py  test_nonblocking_intake.py  test_owl_turn_stream_delivery_integration.py  test_router_wiring.py  test_turn_registry.py  test_turn_router_classifier.py
v2/tests/infra/: test_recovery_context.py  test_trace_durable_scope.py
v2/tests/integrations/: __init__.py  test_google_honesty.py  test_integration_adapter_contract.py  test_story_11_4.py
v2/tests/interaction/: test_clarify_gateway.py
v2/tests/journeys/: README.md  __init__.py  test_budget_cap.py  test_check_in_delivers.py  test_circuit_aware_routing_journey.py  test_conversational_bypass_journey.py  test_discord_reply_routing.py  test_discord_wiring_gated.py  test_dna_completion_journey.py  test_durable_delegation_journey.py  test_evolution_promotion_off_turn_path.py  test_j10_vision_analyze.py  test_j11_execute_code.py  test_j12_ptc.py  test_j1_j2_durable_kill_resume.py  test_j1_pdf_summarize_and_schedule.py  test_j2_research_and_remember.py  test_j3_debug_script.py  test_j4_tools_bounds.py  test_j5_independent_opinions.py  test_j6_clarify_pause_resume.py  test_j8_batch_approval.py  test_j9_process_wait.py  test_j_durable_goal.py  test_learning_explainability_journey.py  test_memory_fix_guards.py  test_model_aware_charter_journey.py  test_no_dressed_up_giveup_journey.py  test_owl_builder_journey.py  test_p1_concurrent_foundation.py  test_p2p3_steer_merge_gate.py  test_persona_evolution_journey.py  test_preflight_envelope.py  test_self_heal_false_positives.py  test_self_heal_invariant.py  test_self_heal_lying_judge.py  test_skill_injection_journey.py  test_skill_tiering_journey.py  test_streamed_cost_journey.py  test_tool_scope_envelope.py  (+1 more)
v2/tests/learning/: test_heuristic_ranking.py  test_tool_heuristic.py
v2/tests/mcp/: test_mcp_allowlist.py  test_mcp_cache.py  test_mcp_client.py  test_mcp_schemas.py
v2/tests/memory/: test_assembly.py  test_dream_worker_reliability.py  test_extractor_trust.py  test_hot_path_wiring.py  test_mem_1_recall_ranking.py  test_outcome_capture.py  test_plan_b_conversation_miner.py  test_plan_b_dreamworker_mining.py  test_plan_b_promotion.py  test_plan_b_rca_integration.py  test_preference_injection.py  test_preference_store.py  test_recall_model_mismatch_journey.py  test_recall_render_trust.py  test_trust_stamping.py
v2/tests/migration/: test_export_import_roundtrip_fresh.py
v2/tests/notifications/: test_notification_target.py  test_proactive_target.py
v2/tests/owls/: test_a2a_fidelity.py  test_base_prompt.py  test_builder.py  test_dna_defaults.py  test_dna_governor.py  test_dna_hydrator.py  test_dna_hydrator_owner_scope.py  test_dna_injector.py  test_lean_charter_dna.py  test_manifest_pinned_skills.py  test_manifest_provenance.py  test_manifest_skills.py  test_owl_revalidator.py  test_registry_secretary_name.py  test_router_intent_class.py  test_session_registry.py  test_tool_presets.py  test_yaml_round_trip.py
v2/tests/parliament/: test_e8_s0_shared_governor.py  test_parl_1_sentinel_exclusion.py
v2/tests/paths/: test_stackowl_home.py
v2/tests/pipeline/: test_answer_quality_judge.py  test_applied_lessons_render.py  test_assemble_skills.py  test_authz_compose.py  test_child_floor.py  test_classify_conversational_lean.py  test_consequential_giveup_veto.py  (+31 more)
(+4983 files in other folders)
